--- a/index.html
+++ b/index.html
@@ -30,11 +30,29 @@
                 <li class="nav-item">
                     <a href="" class="nav-link">TICKETS</a>
                 </li>
-
             </ul>
-
         </div>
     </nav>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div id="headings" class="text-white text-center d-none d-lg-block mt-5">
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                    <h1 class="text-center">MUSEUM <span>/</span> OF <span>/</span>CANDY</h1>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <img class="img-fluid" src="imgs/candy1.jpg" alt="">
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
