--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+    <nav id="mainNavbar" class="navbar navbar-light navbar-expand-md py-0 fixed-top">
         <a href="#" class="navbar-brand">CANDY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks"
             aria-label="Toggle navigation">
@@ -50,6 +50,102 @@
 
             <div class="col-lg-6">
                 <img class="img-fluid" src="imgs/candy1.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/candy2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>OUR HISTORY</h2>
+                        <img src="imgs/lollipop.png" alt="" style="width:80px;height: 80px;" class="d-none d-lg-inline">
+                        <p class="lead>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac est
+                            hendrerit,
+                            laoreet massa nec, faucibus lacus. Integer congue mattis lacus, vel luctus velit molestie
+                            nec. In
+                            facilisis ex nec ante bibendum, id aliquam orci maximus. Vestibulum consequat vulputate
+                            mauris.
+                            Aliquam laoreet et orci sed congue. Ut rutrum gravida lorem, at pharetra ligula. Phasellus
+                            ultrices
+                            placerat massa in viverra. Suspendisse suscipit pretium elit, vitae pharetra purus ultricies
+                            sit
+                            amet. In hac habitasse platea dictumst. Proin et ligula vel odio commodo lobortis. Donec
+                            ornare a
+                            dui eget sodales. Quisque sagittis egestas fermentum. Vivamus tincidunt nibh a lectus
+                            rhoncus
+                            sagittis. Sed maximus varius tempus. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2">
+                <img src="imgs/candy3.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>WHY CANDIES?</h2>
+                        <img src="imgs/lollipop.png" alt="" style="width:80px;height: 80px;" class="d-none d-lg-inline">
+                        <p class="lead>">Praesent lobortis tellus erat, nec scelerisque dolor efficitur eu. Sed enim mi,
+                            aliquam eu mauris at, interdum euismod quam. Donec consectetur, justo eget pulvinar
+                            suscipit, velit elit faucibus dolor, at ullamcorper neque sapien vel elit. Proin scelerisque
+                            mattis maximus. Maecenas ac sapien a turpis tempus tincidunt. Nullam luctus, orci vitae
+                            fermentum sagittis, ipsum neque auctor diam, non mattis lorem augue vitae velit. Etiam
+                            auctor lacinia hendrerit. Cras rutrum et lorem at mollis. Sed commodo maximus nibh, non
+                            molestie tortor fermentum non. Nam venenatis neque quis mi scelerisque, ut gravida leo
+                            lobortis. Nulla facilisi. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/candy4.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>EXIBITIONS</h2>
+                        <img src="imgs/lollipop.png" alt="" style="width:80px;height: 80px;" class="d-none d-lg-inline">
+                        <p class="lead>">Fusce augue diam, tempor a iaculis in, aliquam non libero. Donec nec nisi sit
+                            amet mi lacinia porttitor ac ut enim. Proin suscipit nec nibh eu tempus. Etiam ut consequat
+                            orci. Nunc blandit pellentesque elit, sed tincidunt leo pharetra vehicula. Aenean elit erat,
+                            pharetra non nulla et, rhoncus euismod arcu. Nullam suscipit lectus sit amet libero iaculis,
+                            eu tempor massa hendrerit. Etiam imperdiet vestibulum orci, facilisis elementum magna
+                            fermentum a. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2">
+                <img src="imgs/candy6.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>COMING SOON...</h2>
+                        <img src="imgs/lollipop.png" alt="" style="width:80px;height: 80px;" class="d-none d-lg-inline">
+                        <p class="lead>">Mauris id ex ipsum. Mauris sodales, orci vel ornare molestie, eros sapien
+                            aliquet enim, ut porttitor sapien mi sed metus. Cras maximus rhoncus dolor ut iaculis.
+                            Quisque tristique lacus a risus vestibulum tincidunt. Cras iaculis rhoncus tortor, vel
+                            posuere ex lobortis a. Proin dapibus sodales mauris vitae porttitor. Sed porta enim ut
+                            molestie vehicula. Cras nec tortor tincidunt, fringilla risus et, rutrum justo. Aliquam erat
+                            volutpat. In vel tempus lorem, ac lacinia est. Aenean maximus, tortor ac pretium blandit,
+                            orci tortor lobortis nisi, quis posuere ipsum nisi a est. </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
