--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav id="mainNavbar" class="navbar navbar-light navbar-expand-md py-0 fixed-top">
+    <nav id="mainNavbar" class="navbar navbar-light  navbar-expand-md py-0 fixed-top">
         <a href="#" class="navbar-brand">CANDY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks"
             aria-label="Toggle navigation">
@@ -155,6 +155,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var nav = $("#mainNavbar");
+                nav.toggleClass("scrolled", $(this).scrollTop() > nav.height());
+            })
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
